--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   </style>
 </head>
 
-<body class="bg-[#F4F4F2]">
+<!-- <body class="bg-[#F4F4F2]"> -->
+<body class="bg-stone-100">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
