--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <!-- <body class="bg-[#F4F4F2]"> -->
-<body class="bg-stone-100">
+<body class="bg-white">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
