--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 </head>
 
 <!-- <body class="bg-[#F4F4F2]"> -->
-<body class="bg-white">
+<!-- <body class="bg-gray-200"> -->
+<body class="bg-black">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
