--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>vite-project</title>
 
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-    rel="stylesheet"> -->
-  <!-- 
+    rel="stylesheet">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-    rel="stylesheet"> -->
+    rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
 
   <style>
     * {
-      /* font-family: "Playfair Display"; */
+      font-family: "Playfair Display";
       /* font-family: "Montserrat"; */
       font-family: "Source Sans 3";
     }
@@ -35,6 +35,7 @@
 
 <!-- <body class="bg-[#F4F4F2]"> -->
 <!-- <body class="bg-gray-200"> -->
+
 <body class="bg-black">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
